# Jericho

./: .gitignore  CMakeLists.txt  Makefile  Makefilec  README.md  configure  install  jericho  jericho.plist  request.txt
archive/: login.c
archive/prizm/: file_system.h  prizm.h  test.h
backend/: README.md  setup.py
backend/include/: label_studio.h
backend/include/crypt/: sha1.h
backend/include/db_adapter/: database.h  row.h  table.h
backend/include/prizm/: benchmark.h  error.h  print_color.h  test.hpp
backend/include/server/: client.h  common.h  defs.h  event.h  peer.h  proxy.h  server.h  smtp.h
backend/src/: client_ui.cc  main.cc
backend/src/crypt/: sha1.cc
backend/src/prizm/: error.cc
backend/src/server/: client.cc  event.cc  frame.cc  peer.cc  ping_pong.cc  response.cc  server.cc  shutdown.cc  socket.cc  thread_pool.cc  web_socket.cc
backend/src/ssh/: ssh_auth.cc  ssh_command.cc
backend/src/util/: scan.cc
cgi/: login  login.cc  login.sh
cluster/8081/: index.html
cluster/8082/: index.html
cluster/8083/: index.html
cluster/log/: 8080.boss  8081.node  8082.node  8083.node
cmake-build/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server  tf  zero
cmake-build/ext/prizm-cxx/: Makefile  cmake_install.cmake
config/: aggregator.json  client.json  cluster.json  demo-gui.json  demo.json  demo2-gui.json  dns.json  environments.json  federator copy.json  fred.json  jon-gui.json  mongo  orchestrator.json  orchestrator2.json  psql  routes.json  settings  topology.json  tree-gui.json
config/docker/app/: Dockerfile
config/federated/: central.json
config/keys/: decrypted_jwt.txt  output.txt  public_encrypted.txt
core/cgi/: auth.cc
core/src/: flash.cc  main.cc  trash.c  unbel.cc
core/src/api/: api_helper.cc
core/src/cluster/: cluster.cc  cluster_edge.cc  cluster_index.cc  cluster_node.cc
core/src/controller/: auth.cc
core/src/crypt/: base64.cc  base64_c.cc  rsa.cc  sha1.cc  utf8.cc
core/src/federate/: fed_node.cc  federator.cc
core/src/iris/: iris.cc
core/src/message/: bifrost.cc  message.cc  message_broker.cc  message_buffer.cc  message_job.cc
core/src/router/: route_registry.cc  router.cc
core/src/serializer/: serializer.cc
core/src/server/: binary_archive.cc  client.cc  clock_sync_boss.cc  clock_sync_worker.cc  fetch.cc  frame.cc  iris.cc  multiplex_out.cc  request.cc  resource.cc  response.cc  router.cc  server.cc  shutdown.cc  socket.cc  web_socket.cc
core/src/session/: session.cc
core/src/ssh/: ssh_connect.cc
core/src/system/: router.cc  routes.cc  system.cc
core/src/util/: cast_utils.cc  encoding.cc  file_system.cc  scan.cc  string_utils.cc  tools.cc  trace.cc
core/test/: advanced_test.cc  celerity_integration.cc  cgi.cc  clock.cc  cookie.cc  crypt_playground.cc  interpret.cc  jwt.cc  main.cc  request.cc  response.cc  router.cc  rsa.cc  session.cc  string_util.cc  system.cc  trace.cc  trie.cc  url.cc
core/test/data/: request_1.txt  request_2.txt  request_4.txt  request_5.txt  request_bin.txt  request_content.txt  request_post.txt  request_status.txt  test.html  test_request.txt  to_encrypt.txt
core/test/iris/: iris_form.cc  iris_interpret.cc  iris_shell.cc
core/test/unit/: base64.h  cookie.h  file_assembler.h  jwt.h  message.h  message_manager.h  prizm2.h  request.h  rsa.h  tests.h  url.h
data/: get_some.txt  get_test.txt  smd.txt  wn.xml
data/seeds/: animal.txt  color.txt  fruit.txt  location.txt  vegetable.txt
db/: drop.sql  schema.sql
db/cache/: meal.json  portfolio.json  todo.json  user.json
db/model/: ema.json  macd.json  meal.json  ohlc.json  ohlc_bar.json  portfolio.json  rsi.json  sma.json  stock.json  ticker.json  todo.json  transaction.json  user.json
db/seed/: ticker.sql
db_/: drop.sql  schema.sql
db_/model/: food.json  transaction.json  user.json
example/: client.cc  tensorflow.cc  zeromq.cc
frontend/: index.html  ws.json
frontend/css/: final.css
frontend/jericho/: demo.txt  index.html
frontend/jsm/quantizmo/: feature.js  main.js  scene.js  three.module.js
frontend/response/: 404.html
frontend/stocket/: index.html
include/jericho/: lib.hpp  trash.h
include/jericho/api/: polygon.h  router.h  string_utils.h  url.h
include/jericho/server/: iris.h  mpi.h  ping_pong.h  request.h  resource.h  response.h  router.h  server.h  shutdown.h  socket.h  ssh.h  web_socket.h
jericho/: README.md  setup.py
jericho/include/server/: event.h  frame.h  scheduler.h  thread_pool.h
jericho/include/util/: file_system.hpp  scan.h
jericho/src/prizm/: error.cc  file_system.cc  print_color.cc
jericho/src/server/: client.cc  ping_pong.cc  server.cc  smtp.cc  socket.cc
jericho/src/ssh/: ssh_version.cc
log/: 127.0.0.18081.node  8080.node  8081.node  8082.node  8083.node  8084.node  8085.node  8086.node  8087.node  8088.node  8089.node  8090.node  clients  undefined.node
public-copy/cluster/8081/: ping.html  test.txt  train.txt
public-copy/cluster/8083/: test.txt  train.txt
public-copy/cluster/8084/: index.html  ping.html  test.txt
public-copy/cluster/8085/: ping.html  train.txt
public-copy/frontend/: index.html  test.html
public/cluster/8080/: agg-0.wt  (+2 more)
py/: create_data.py  demo1.py  download_mnist.py  federated.py  fusion.py  generate_mnist.py  mnist.py  mnist_raw.py  partition-ibm.py  partition.py  requirements.txt  router.py  server.py  torch_infer.py  torch_load.py  torch_save.py  tutorial.py
py/archive/: h5-example.py  load.py  server.py
py/models/: mnist_train.wt  ok.mod  ok_full.fmod
py/script/: c.sh  psql-install.sh  py.sh
py/scripts/: torch.pt
py/studyhall/: main.py  neo.py  neo4j_local.py  properties.py  psql.py  query_builder.py
py/weights/: checkpoint
resource/: _template.html
resource/error/: 404.html  500.html  report.html
scaffold/response/: 404.html
script/: cpp.sh  run-env.sh
src/: main.cc
src/crypt/: utf8.cc
src/server/: event.cc  iris.cc  request.cc  resource.cc  response.cc  server.cc  socket.cc  thread_pool.cc
src/ssh/: ssh_download.cc
src/util/: file_system.cc  file_system.cpp  scan.cc  string_utils.cc
(+283 files in other folders)
